--- a/src/components/ProjectShowcase.css
+++ b/src/components/ProjectShowcase.css
@@ -27,6 +27,19 @@
 
 .project-showcase-project-list {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.project-showcase-project-card {
+    width: 100%;
+    height: 250px ;
+    background-color: var(--grey) !important;
+}
+
+.project-showcase-project-card:hover {
+    box-shadow: 0 0 5px 3px var(--light-yellow) !important; 
 }
 
 .project-showcase-title {
