--- a/src/components/AcademicProjects.css
+++ b/src/components/AcademicProjects.css
@@ -4,6 +4,39 @@
     --grey: #363636;
 }
 
+.academic-projects-foundation {
+    width: 100%;
+
+    .MuiOutlinedInput-notchedOutline {
+        border-color: var(--light-yellow) !important;
+    }
+    
+    .css-lohd6h-MuiSvgIcon-root-MuiSelect-icon, .css-1umw9bq-MuiSvgIcon-root {
+        color: var(--light-yellow) !important;
+    }
+}
+
+.css-1rju2q6-MuiButtonBase-root-MuiMenuItem-root {
+    background-color: var(--grey) !important;
+    color: white !important;
+}
+
+.css-1tktgsa-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
+    background-color: var(--grey) !important;
+}
+
+.academic-projects-filter {
+    flex: 1;
+    background-color: var(--grey);
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
 .academic-projects-container {
     display: flex;
     flex-wrap: wrap;
@@ -38,3 +71,4 @@
     color: var(--light-yellow)!important;
     background-color: var(--dark-grey)!important;
 }
+
