Content Update & Back To Project List Button & Sort Title

--- a/src/components/Foundation.css
+++ b/src/components/Foundation.css
@@ -1,6 +1,7 @@
 :root {
     --dark-purple: rgb(70, 0, 70);
     --light-yellow: rgb(255, 255, 135);
+    --grey: #363636;
     --dark-grey: #282828;
 }
 
