--- a/src/components/UnityGame.css
+++ b/src/components/UnityGame.css
@@ -8,3 +8,17 @@
 .game {
     border: none;
 }
+
+.mobile {
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+    .game {
+        display: none;
+    }
+
+    .mobile {
+        display: inline;
+    }
+}
